fix white cursor invisible in `atom settings` page

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -5,7 +5,7 @@
 
 // General colors
 @syntax-text-color: white;
-@syntax-cursor-color: white;
+@syntax-cursor-color: magenta;
 @syntax-selection-color: darken(@blue, 15%);
 @syntax-background-color: @background;
 
